--- a/Lesson2/notes.html
+++ b/Lesson2/notes.html
@@ -124,6 +124,10 @@
           Start with large element boxes (i.e. header, body, footer). Then break down individual content inside those larger
           elements
         </p>
+        <h3>Styling the website and CSS notes</h3>
+        <p>
+          CSS is made up of a property and a value for that property, which en total are referred to as a declaration.
+        </p>
       </div>
       <!-- End Lesson 2 Content div -->
 
